# apollo

./: .gitmodules  CMakeLists.txt
designs/: api  erm.odg
include/apollo/: db.hpp  router.hpp  server.hpp
src/: CMakeLists.txt  attachment.cpp  attachment.hpp  db.cpp  db.hpp  image_scaled.cpp  image_scaled.hpp  item_image.cpp  item_image.hpp  rest.cpp  rest.hpp  router.cpp  router.hpp  server.cpp  server.hpp
src/main/: apollo.cpp  apollo.hpp
static/: CMakeLists.txt  application.js  index.html  index.js  manage.html  manage.js  models.js  stacked_application.js  style.css
web/: CMakeLists.txt  application.js  index.html  index.js  manage.html  manage.js  models.js  style.css  views.html
